src/app/components/msel-teams/msel-teams.component.scss
// Copyright 2022 Carnegie Mellon University. All Rights Reserved.
// Released under a MIT (SEI)-style license. See LICENSE.md in the
// project root for license information.

@use "@angular/material" as mat;

:host {
  @include mat.form-field-density(-5); // Adjust -3 for this specific form field
}

.frame {
  display: flex;
  flex-direction: column;
  flex: 1;
  height: calc(100vh - 39px);
}

.table {
  font-size: small;
  width: 100%;
  overflow: none;
  background: transparent;
}

.header-row {
  min-height: 40px;
  background: transparent;
}

.row {
  min-height: 36px;
}

.row,
.header-row {
  display: flex;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  align-items: center;
  box-sizing: border-box;
}

.header-cell {
  font-weight: bold;
}

.cell,
.header-cell {
  display: flex;
  flex-direction: row;
  overflow: hidden;
  word-wrap: break-word;
  text-align: left;
}

.expansion-panel-header {
  display: flex;
  flex-direction: row;
  text-align: left;
  flex: 1;
}

.search-cell {
  display: flex;
  flex-flow: row;
}

.search-control {
  width: calc(100% - 32px);
}

.scrolling-region {
  width: 100%;
  height: calc(100vh - 80px);
  overflow: auto;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.section-container {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.section-content {
  width: 100%;
  min-width: 600px;
}

.expansion-panel {
  width: calc(100% - 10px);
  margin: 5px;
}

.user-panel {
  display: flex;
  flex-direction: row;
  flex: 1;
  align-items: center;
  justify-items: center;
}

.team-detail {
  text-align: left;
  margin-left: 50px;
  margin-bottom: 10px;
  width: calc(100% - 50px);
  display: flex;
  flex-direction: row;
  flex: 1;
}

.other-teams-div {
  text-align: left;
  margin-left: 50px;
  width: calc(100% - 50px);
}

.action-buttons {
  width: 90px;
}

.header-action-buttons {
  display: flex;
  width: 90px;
  align-items: center;
}

.user-name {
  display: flex;
}

.msel-role {
  display: flex;
}

.no-users {
  width: 100%;
  text-align: left;
  padding-left: 100px;
}

.center-self {
  align-self: center;
}

